# fleximon-robotics

./: .gitmodules  README.md
fleximon/fleximon_data/: afag_gripper.urdf.xacro~  fleximon.urdf.xacro~  manifest.xml  manifest.xml~  ur5_fleximon.urdf.xacro~  ur5_iml.urdf.xacro~
fleximon/fleximon_data/data/: FlexiMon.dae  FlexiMon_Kollisionsmodell.dae  Magazin_Dummy_M2.dae  afag_gripper.dae  afag_gripper.urdf.xacro~  afag_gripper50.dae  afag_gripper_m1.dae  afag_gripper_m1.urdf.xacro~  fleximon.urdf.xacro~  ikfast61_ur5_iml.cpp  magazin.dae  magazin.urdf.xacro  magazin.urdf.xacro~  sauggreifer4x.urdf.xacro~  ur5_fleximon.urdf.xacro  ur5_fleximon.urdf.xacro~  ur5_fleximon_m1.urdf.xacro  ur5_iml.urdf  werkstuecktraeger.urdf.xacro  werkstuecktraeger.urdf.xacro~
fleximon/fleximon_data/data/stl/: afag_gripper50.dae  ur5_iml.urdf  ur5_iml.urdf~
fleximon/fleximon_data/data/stl/.svn/: entries
fleximon/fleximon_data/data/stl/.svn/text-base/: Palette_Karton_1.stl.svn-base  Palette_Karton_2.stl.svn-base  Palette_Karton_3.stl.svn-base  Palette_Karton_4.stl.svn-base
fleximon/fleximon_manipulation/fleximon_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fleximon/fleximon_manipulation/fleximon_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  kinematics.yaml~  ompl_planning.yaml  ompl_planning.yaml~  ur5_fleximon.srdf
fleximon/fleximon_manipulation/fleximon_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_harting_fake.launch  ur5_harting_fake.launch~  ur5_harting_real.launch  ur5_harting_real.launch~  warehouse.launch
fleximon/fleximon_manipulation/fleximon_moveit_config/rviz_config/: rviz_config_harting.rviz
fleximon/fleximon_manipulation/fleximon_moveit_config_m1/: .setup_assistant  CMakeLists.txt  package.xml
fleximon/fleximon_manipulation/fleximon_moveit_config_m1/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ur5_fleximon.srdf
fleximon/fleximon_manipulation/fleximon_moveit_config_m1/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_harting_fake_m1.launch  ur5_harting_fake_m1.launch~  ur5_harting_real_m1.launch  ur5_harting_real_m1.launch~  warehouse.launch
marker_display/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
marker_display/launch/: marker_display.launch  marker_display.launch~  param.yaml  param.yaml~
marker_display/meshes/: Magazin.STL  test.stl
marker_display/src/: magazin_frames.cpp  magazin_frames_m2.cpp  marker_display_node.cpp  quat_calc.cpp
state_machine/: CMakeLists.txt  package.xml
state_machine/goal/: application_goals.yaml  application_goals.yaml~
state_machine/launch/: state_machine.launch  state_machine.launch~
state_machine/src/: ur5_pick_in_bin_states.py  ur5_pick_in_bin_states.py~  ur5_pick_in_bin_states_safe.py  ur5_state_machine.py  ur5_state_machine.py~  ur5_state_machine_safe.py
ur5-microservice/: .cproject  .project  CMakeLists.txt  README.md  ur5-microservice-build-tree-settings.cmake.in  ur5-microservice-config-version.cmake.in  ur5-microservice-config.cmake.in
ur5-microservice/etc/: rsb.conf.sample
ur5-microservice/src/: CMakeLists.txt
ur5-microservice/src/ur5-microservice/: ur5-microservice-client.cpp  ur5-microservice.cpp
ur5-microservice/test/: CMakeLists.txt
ur5_move/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ur5_move/src/: ur5_init.cpp  ur5_move.h  ur5_pick.cpp  ur5_pick_hard.cpp  ur5_pick_out.cpp  ur5_place.cpp  ur5_place_out.cpp
ur5_move/src/ur5-microservice/: ur5-microservice-client.cpp  ur5-microservice.cpp
